--- a/vue-demo/src/translations/i18n/i18n_en.json
+++ b/vue-demo/src/translations/i18n/i18n_en.json
@@ -1,5 +1,5 @@
 {
-	"title.HelloWorld": "Hello world2",
+	"title.HelloWorld": "Hello world",
 	"title.LoginIn": "Sign in to start your session",
 	"message.RememberMe": "Remember Me",
 	"button.SignIn": "Sign In",
